sass/screen.scss
@import "compass/reset";
@import "compass/css3";

$main-space: 100px; /* this is the width of the menu*/
$background-color: #363636;
$mostro-color: #E8540D;
$mostro-menu: #232323;
$text-color: #fff;

/*Responsive values*/
$break-small: 768px;
$item-txt-work: #5a5a5f;
$item-img-work: #2c3434;

@font-face{
  font-family: 'steelfish';
  src: url('../fonts/steelfish/steelfishRG.ttf') format('truetype'),
  url('../fonts/steelfish/steelfishRG.woff') format('woff'),
  url('../fonts/steelfish/steelfishRG.otf'),
  url('../fonts/steelfish/steelfishRG.eot?#iefix') format('embedded-opentype'),
  url('../fonts/steelfish/steelfishRG.svg') format('svg');
}


.transicion{
  -webkit-transition: all ease 0.3s;
  -moz-transition: all ease 0.3s;
  -o-transition: all ease 0.3s;
  transition: all ease 0.3s;
}

@mixin escala($longitud){
  -moz-transform: scale($longitud);
  -webkit-transform: scale($longitud);
  -o-transform: scale($longitud);
  -ms-transform: scale($longitud);
  transform: scale($longitud);
}


/*--------------------Desktop--------------*/

body{
	font-family: 'steelfish';
	background-color: $background-color;
	color: $text-color !important;
	@media screen and (max-width: $break-small) {
		padding-left: 0px;
  	}

}

::-webkit-scrollbar {
    display: none;
}

h1{
  font-size: 6em;
}

nav{
	background-color: $mostro-color;
}

.side-nav{
	width: 100px !important;
  #logo-mostro-media{
    margin-top: 50px;
  }
  .logo-text{
    cursor: pointer;
    h1{
  		font-size: 1.8em;
  	}
  }
	li{
    margin-top: 50px;
		a{
			i{
				font-size: 40px;
			}
		}
	}

}
.table-of-contents{
  a{
    @extend .transicion;
    &.active{
      background: $mostro-color;
      border: none;
      padding: 0 32px;
    }
  }
}
.color-menu{
	background-color: $mostro-menu;
	li{
		color: $text-color;
    a{
  		color: $mostro-color;
      i{
        color: $text-color !important;
      }
  	}
	}
}

.modal-overlay{
  opacity: 0.7 !important;
}
#your-name{
  height: 100vh;
  form{
    width: 100%;

    label{
      margin-top: -20px;
      font-size: 3em;
    }
    h2,input{
      font-size: 2em;
    }
  }
}

#particles-home{
	position: fixed;
	top: 0;
	left: 0;
	z-index: -10;
}


#home {
  height: 100vh;
  position: relative;

  #logo-mostro-media-center{      
    @media screen and (min-width: 1025px) and (max-width: 1223px){
      width: 300px;
    }
    @media screen and (min-width: 1224px) and (max-width: 1823px){
      width: 400px;
    }
    @extend .transicion;

    width: 600px !important;
    height: 600px !important;
    margin-right: auto !important;
    margin-left: auto !important; 
    margin-top: 100px;

  }
  h1{
    margin-top: -150px;
    font-size: 3em;
  }
  
	#iconos-home {
    @extend .transicion;
    width: 100%;
    margin-top: 50px;
    .fifth{
      width: 20%;
      float: left;
    }
		li{
			display: inline-block;
      
      div{
        width: 100px;
        margin-left: auto;
        margin-right: auto;
      }
			p{
				text-align: center;
				font-size: 1.5em;
			}
		}
	}

	button{
		font-size: 1.4em;
	}

}

#work {
  background-color: rgba($background-color,0.9);
  margin-top: 200px;
  
	.row{
		height: 70vh;
  }
  
  #serv-section{
    margin-top: 200px;  
  }
  #individual-services{
    li{
      display: inline-block;
    }
  }
  .card{
    border-right: 1px solid #424242;
    @media screen and (max-width: 768px){
      height: auto;
    }
    .card-content{
      padding: 20px 2px;
      .card-title{
        font-size: 3em !important;
      }
    }

    .card-image{
      img{
        padding: 30px;
        width: 50%;
        margin-left: auto;
        margin-right: auto;
      }
    }
    
    .card-reveal{
      height: 220px;
      h3{
        font-size: 2em;
        text-align: justify;
      }            
    }
  }  

  #trigger-work-msj{
    position: relative;
    display: block;
    margin-left: 97%;
  }
}

.fullscreen-bg{
  position: relative;
  height: 800px;
  width: 100%;
}

.fullscreen-bg__video{
  position: absolute;
  right: 0;
  left: 0;
  width: 100%;
  height: 140%;
}

@media (min-aspect-ratio: 16/9) {
  .fullscreen-bg__video , .fullscreen-bg__video2{
    height: 200%;
    top: -35%;
  }
}

#team{
  height: 70vh;
  .wrap {
    display: flex;
  }

  .wrap > li {
      z-index: 100;
      width: 33%;
      flex: 1;
      @extend .transicion;
      img{
        width: 100%;
        height: 500px;
      }
      h4{
        font-size: 1.2em;
      }
      p{
        font-size: 1.2em;
        letter-spacing: 1px;
      }
  }

  .wrap > li:hover {
      flex: 2;
  }
}

#contact{
  height: 700px;
  #content-contact, #form-contact{
    margin: 20px 0 0 5%;
    background-color: #333;
    .valign-wrapper{
      height: 400px;
      .valign{
        text-align: center;
        width: 100%;
      }
    }
  }
  form{
    margin-left: 10%;
    width: 80%;
    input,label{
      letter-spacing: 1px;
    }
  }
  h2{
    font-size: 2em;
  }
}


footer{
  .social {
  	position: relative;
  	height: 3em;
  	width: 13.5em;
    display: block;
    margin: 60px auto;
    li{
      display: block;
    	height: 4em;
    	line-height: 4em;
    	margin: -2.2em;
    	position: absolute;
      text-align: center;
    	width: 4em;
      @extend .transicion;
      @include rotate(45deg);
      &:hover{
        @include rotate(45deg * 9);
      }
    }
    a{
      color: #fffdf0;
    	display: block;
    	height: 4em;
    	line-height: 4em;
    	text-align: center;
      width: 4em;
      @include rotate(-45deg);
    }
  }
  .facebook,
  .instagram,
  .github,
  .behance,
  .linked-in{
    background: #363636;
  }
  .facebook {
  	left: 0;
  	top: 0%;
    &:hover{
      background: #155b9d;
    }
  }

  .instagram {
  	left: 50%;
  	top: 0%;    
    &:hover{
      background:
        radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%),
        radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%),
        radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%),
        radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%),
        radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%),
        radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%),
        radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent),

        linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
    }
  }

  .github {
  	bottom: 0;
  	left: 25%;
    &:hover{
      background: #141414;
    }
  }

  .behance {
  	bottom: 0;
  	left: 75%;
    &:hover{
      background: #3f7aa3;
    }
  }

  .linked-in {
  	left: 100%;
  	top: 0%;
    &:hover{
      background: #157f9d;
    }
  }
  p{
    letter-spacing: 1px;
    font-weight: normal;
  }
}


.progress{
  background-color: #fff !important;
}

.toast{
  font-size: 1.8rem;
  font-weight: normal;
}


@media screen and (max-width: 1024px){
  body{
    overflow-x: hidden;
  }
  h1{
    font-size: 4em;
  }
  nav{
    .brand-logo{
      margin-top: 12px !important;
    }
  }
  .nav-wrapper{
    ul{
      li{
        a{
          padding: 0 32px !important;
        }
      }
    }
  }
  #work{
    .card{
      margin-top: 10px !important;
    }
  }

  #team{
    height: 70vh;
    .wrap {
      display: block;
      & > li {
        width: 100% !important;
      }      
    }
  }
  


}

@media screen and (min-width: 1824px){}

@media screen and (min-width: 1524px) and (max-width: 1823px){
  #home{
    #mostro-center{
      top: 30vh;
    }
  }
}

@media screen and (min-width: 1225px) and (max-width: 1523px){}

@media screen and (min-width: 1025px) and (max-width: 1224px){}

@media screen and (min-width: 801px) and (max-width: 1024px){
  nav{
    position: fixed;
    top: 0;
    z-index: 100;
  }
  .fullscreen-bg__video{
    width: auto !important;
    height: 700px;
    margin-left: -350px;
  }
}

@media screen and (min-width: 401px) and (max-width: 800px){
  body{
    overflow-x: hidden;
  }
  nav{
    position: fixed;
    top: 0;
    z-index: 100;
  }
  #main{
    overflow-y: hidden;
  }
  #home{
    #logo-mostro-media-center,canvas{
      width: 100% !important;
    }
    h1{
    margin-top: -300px;
    }     
  }
  .fullscreen-bg__video{
    width: auto !important;
    height: 700px;
    margin-left: -350px;
  }
  #work{
    .row{
      height: auto;
    }
  }
  #team{
    margin-top: 100px;
    ul .slick-current img {
        margin-top: 60px;
        width: 100%;
    }    
    .card-panel{
      width: 200px;
      margin: 30px -45px;
    }
  }
  #content-contact, #form-contact{
    margin: 0 !important;
  }  
  footer{
    margin-top: 400px !important;
  }
}

@media screen and (max-width: 400px){
  body{
    overflow-x: hidden;
  }  
  nav{
    position: fixed;
    top: 0;
    z-index: 100;
  }
  #main{
    overflow-y: hidden;
  }
  #home {
  	#logo-mostro-media-center, canvas{
      width: 100% !important;
    }
  h1{
    margin-top: -300px;
    }    
  }

  .fullscreen-bg{
    margin: 200px 0;
    overflow-x: hidden;
    height: 500px;

    .fullscreen-bg__video{
      width: auto !important;
      margin-left: -300px;
      height: 500px;
    }
  }
  #team{
    height: auto;
    margin: 300px 0;
    .carousel{
      position: relative;
      .carousel-item{
        width: 100%;
        height: auto;
      }
    }
  }
  footer{
    margin-top: 400px !important;
  }

  #content-contact, #form-contact{
    margin: 0 !important;
  }


}

